unpackaged/main/default/objects/pse__Project_Versioning_Global_Settings__c/pse__Project_Versioning_Global_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control at an org level certain aspects of project versioning.</description>
    <label>Project Versioning Global Settings</label>
</CustomObject>