unpackaged/main/default/objects/pse__Project_Versioning_Global_Settings__c/fields/pse__Create_Version_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Create_Version_Batch_Size__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Defines the batch size when creating Project Versions. The default value is 500.</description>
    <inlineHelpText>Defines the batch size when creating Project Versions. The default value is 500.</inlineHelpText>
    <label>Create Version Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>