unpackaged/main/default/objects/pse__Project_Versioning_Global_Settings__c/fields/pse__VPV_Quick_Help_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__VPV_Quick_Help_Resource__c</fullName>
    <description>Defines the name of the static resource (with namespace prefix) to use for customizing language and graphics in the introduction Quick Help for Compare Versions. Leave blank to use the default resource.</description>
    <inlineHelpText>Defines the name of the static resource (with namespace prefix) to use for customizing language and graphics in the introduction Quick Help for Compare Versions. Leave blank to use the default resource.</inlineHelpText>
    <label>View Project Version Quick Help Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>