unpackaged/main/default/objects/pse__Project_Versioning_Global_Settings__c/fields/pse__VPV_Records_loaded_per_call__c.field-meta.xml
<CustomField>
    <fullName>pse__VPV_Records_loaded_per_call__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Defines the number of records loaded in the detail view of View Project Versions. Increasing the value can improve load times but may encounter platform limits. The default value is 500. Entering 0 as a value for this field results in no records loading.</description>
    <inlineHelpText>Defines the number of records loaded in the detail view of View Project Versions. Increasing the value can improve load times but may encounter platform limits. The default value is 500. Entering 0 as a value for this field results in no records loading.</inlineHelpText>
    <label>View Project Version Records Loaded</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>